--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.002   2017-06-23 (PERLANCAR)
+
+	- Adjust to Log::ger 0.005.
+
+
 0.001    2017-06-21 (PERLANCAR)
 
          - First, early release.
