--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+0.003   2017-06-25 (PERLANCAR)
+
+        - [Incompatible change] Rename output specification key 'args' to
+          'conf'.
+
+        - Implement configuration 'category_level' & output specification key
+          'category_level'.
+
+
 0.002   2017-06-23 (PERLANCAR)
 
 	- Adjust to Log::ger 0.005.
