--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.005   2017-07-01 (PERLANCAR)
+
+        - Get output module's hook in a proper, sane way.
+
+        - Support per-output layout.
+
+
 0.004   2017-06-25 (PERLANCAR)
 
 	- No functional changes.
