--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.006   2017-07-02 (PERLANCAR)
+
+	- [optimize] Convert to returning a multilevel log.
+
+
 0.005   2017-07-01 (PERLANCAR)
 
         - Get output module's hook in a proper, sane way.
