--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.008   2019-01-31 (PERLANCAR)
+
+	- No functional changes.
+
+	- [ux] Check arguments.
+
+
 0.007   2017-07-02 (PERLANCAR)
 
 	- [Bugfix] Fix leak by using per-target variable name.
