--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 0.009   2019-09-17  Released-By: PERLANCAR; Urgency: medium
 
-	- Introduce set_level() as an easy way to re-set all output levels
-	  to this value.
+	- Introduce set_level() as an easy way to re-set level of all outputs
+	  and categories, because Log::ger::Util's set_level() doesn't work for
+	  us.
 
 
 0.008   2019-01-31  Released-By: PERLANCAR
