--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.011   2020-02-06  Released-By: PERLANCAR; Urgency: medium
+
+	- [bugfix] Fix typo in package name.
+
+
 0.010   2019-09-18  Released-By: PERLANCAR; Urgency: low
 
 	- No functional changes.
