--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.017   2020-11-17  Released-By: PERLANCAR; Urgency: medium
+
+	- Observe LOG_GER_OUTPUT_COMPOSITE_DEBUG.
+
+        - Cache each layouter's and outputter's get_hooks() to avoid repetitive
+          calling.
+
+
 0.016   2020-03-11  Released-By: PERLANCAR; Urgency: medium
 
 	- Bump v to 2 to comply to Log::ger 0.037.
